Fix the style of the ContentDispositionType enum definition https://bugs.webkit.org/show_bug.cgi?id=118990

Reviewed by Darin Adler.

* platform/network/HTTPParsers.h: Align the style of the ContentDispositionType enumeration
definition with the other enumeration definitions in the HTTPParsers header, using the
'enum Name { ... }' style instead of a typedef.


Canonical link: https://commits.webkit.org/136835@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153039 268f45cc-cd09-0410-ab3c-d52691b4dbfc